--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta name="og:description" content="
+    This app provides an elegant and intuitive user interface and experience for booking your favorite Vespa.
+     Users can login, browse a list of motorcycles, view detailed information about specific motorcycles,
+     reserve a motorecycle, add and delete new motorcycles (ADM only). 
+     The application is fully responsive and offer a seamless experience on both desktop and mobile devices. 
+    The front-end communicates with the back-end API to ensure a cohesive and efficient user experience."
     />
+    <meta name="og:title" content="Motorcycle Booking App"/>
+    <meta name="og:image" content="%PUBLIC_URL%/motoBooking.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>MotoBooking</title>
   </head>
   <body class="bodyContainer">
     <noscript>You need to enable JavaScript to run this app.</noscript>
